[tool.poetry]
name = "fastapi-memo-app-example"
version = "0.1.0"
description = ""
authors = ["m0ai <frozenmoai@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
fastapi = "^0.61.0"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
